--- a/python04.ipynb
+++ b/python04.ipynb
@@ -344,36 +344,338 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 7,
-   "id": "da26eae0-ad1e-42d8-9f04-c4253d0f42cc",
+   "cell_type": "markdown",
+   "id": "cb61109a-1a71-4f24-b42b-20540ef0c01e",
    "metadata": {},
+   "source": [
+    "## 클래스나 변수등을 포함한 모듈"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "efeb3993-dcbf-4a38-9826-b91744472b82",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with open(\"mod3.py\",\"w\") as f:\n",
+    "    text = \"\"\"PI = 3.141592\\n\\nclass Math:\\n\\tdef solve(self,r):\\n\\t\\treturn PI * (r**2)\\n\\ndef add(a,b):\\n\\treturn a+b\"\"\"\n",
+    "    f.write(text)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "5cf835e9-1b6f-4658-a98d-83dcf70f4244",
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
-    {
-     "name": "stdin",
-     "output_type": "stream",
-     "text": [
-      "종목을 입력하세요 :  기아\n"
-     ]
-    },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "기아 : 94,600원\n",
-      "전 파일로 실행이 되었어요.\n"
+      "Microsoft Windows [Version 10.0.26100.2894]\n",
+      "(c) Microsoft Corporation. All rights reserved.\n",
+      "\n",
+      "JH\\code>set PYTHONPATH=D:\\\\kjh\\\\code\n",
+      "\n",
+      "D:\\KJH\\code>"
      ]
     }
    ],
-   "source": []
+   "source": [
+    "%%cmd\n",
+    "set PYTHONPATH=D:\\\\kjh\\\\code"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9e016362-85e2-4e20-af62-12b19be833ed",
+   "metadata": {},
+   "source": [
+    " - CMD set PYTHONPATH=D:\\kjh\\code\\mymod\n",
+    " - PS $env:PYTHONPATH=\"D:\\kjh\\code\\mymod\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "a14faa25-4c8d-401a-93da-9461d2c9c46f",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "ModuleNotFoundError",
+     "evalue": "No module named 'mod3'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[1], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21;01mmod3\u001b[39;00m\n\u001b[0;32m      2\u001b[0m \u001b[38;5;66;03m# 변수\u001b[39;00m\n\u001b[0;32m      3\u001b[0m \u001b[38;5;28mprint\u001b[39m(mod3\u001b[38;5;241m.\u001b[39mPI)\n",
+      "\u001b[1;31mModuleNotFoundError\u001b[0m: No module named 'mod3'"
+     ]
+    }
+   ],
+   "source": [
+    "import mod3\n",
+    "# 변수\n",
+    "print(mod3.PI)\n",
+    "\n",
+    "# 클래스\n",
+    "a = mod3.Math()\n",
+    "print(a.solve(10))\n",
+    "\n",
+    "# 함수\n",
+    "print(mod3.add(mod3.PI, 4.4))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "fc77948d-432d-431e-a958-6c367645c5f5",
+   "metadata": {},
+   "source": [
+    "## 다른 디렉토리에 있는 모듈 불러오는 방법"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "ca2053b6-bcf0-41ad-8e5d-6525bf5f9522",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['C:\\\\Users\\\\Admin\\\\AppData\\\\Local\\\\Programs\\\\Python\\\\Python313\\\\python313.zip',\n",
+       " 'C:\\\\Users\\\\Admin\\\\AppData\\\\Local\\\\Programs\\\\Python\\\\Python313\\\\DLLs',\n",
+       " 'C:\\\\Users\\\\Admin\\\\AppData\\\\Local\\\\Programs\\\\Python\\\\Python313\\\\Lib',\n",
+       " 'C:\\\\Users\\\\Admin\\\\AppData\\\\Local\\\\Programs\\\\Python\\\\Python313',\n",
+       " '',\n",
+       " 'C:\\\\Users\\\\Admin\\\\AppData\\\\Local\\\\Programs\\\\Python\\\\Python313\\\\Lib\\\\site-packages',\n",
+       " 'C:\\\\Users\\\\Admin\\\\AppData\\\\Local\\\\Programs\\\\Python\\\\Python313\\\\Lib\\\\site-packages\\\\win32',\n",
+       " 'C:\\\\Users\\\\Admin\\\\AppData\\\\Local\\\\Programs\\\\Python\\\\Python313\\\\Lib\\\\site-packages\\\\win32\\\\lib',\n",
+       " 'C:\\\\Users\\\\Admin\\\\AppData\\\\Local\\\\Programs\\\\Python\\\\Python313\\\\Lib\\\\site-packages\\\\Pythonwin',\n",
+       " 'D:\\\\kjh\\\\code\\\\mymod']"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import sys\n",
+    "sys.path"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "a8748d4f-dff2-41c1-bf91-3b35e82286b9",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['C:\\\\Users\\\\Admin\\\\AppData\\\\Local\\\\Programs\\\\Python\\\\Python313\\\\python313.zip',\n",
+       " 'C:\\\\Users\\\\Admin\\\\AppData\\\\Local\\\\Programs\\\\Python\\\\Python313\\\\DLLs',\n",
+       " 'C:\\\\Users\\\\Admin\\\\AppData\\\\Local\\\\Programs\\\\Python\\\\Python313\\\\Lib',\n",
+       " 'C:\\\\Users\\\\Admin\\\\AppData\\\\Local\\\\Programs\\\\Python\\\\Python313',\n",
+       " '',\n",
+       " 'C:\\\\Users\\\\Admin\\\\AppData\\\\Local\\\\Programs\\\\Python\\\\Python313\\\\Lib\\\\site-packages',\n",
+       " 'C:\\\\Users\\\\Admin\\\\AppData\\\\Local\\\\Programs\\\\Python\\\\Python313\\\\Lib\\\\site-packages\\\\win32',\n",
+       " 'C:\\\\Users\\\\Admin\\\\AppData\\\\Local\\\\Programs\\\\Python\\\\Python313\\\\Lib\\\\site-packages\\\\win32\\\\lib',\n",
+       " 'C:\\\\Users\\\\Admin\\\\AppData\\\\Local\\\\Programs\\\\Python\\\\Python313\\\\Lib\\\\site-packages\\\\Pythonwin',\n",
+       " 'D:\\\\kjh\\\\code\\\\mymod']"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sys.path.append('D:\\\\kjh\\\\code\\\\mymod')\n",
+    "sys.path"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "c292877f-216e-408a-910f-0450d0d68b7c",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Requirement already satisfied: pip in c:\\users\\admin\\appdata\\local\\programs\\python\\python313\\lib\\site-packages (25.0)\n",
+      "Collecting pip\n",
+      "  Downloading pip-25.0.1-py3-none-any.whl.metadata (3.7 kB)\n",
+      "Downloading pip-25.0.1-py3-none-any.whl (1.8 MB)\n",
+      "   ---------------------------------------- 0.0/1.8 MB ? eta -:--:--\n",
+      "   ---------------------------------------- 1.8/1.8 MB 52.2 MB/s eta 0:00:00\n",
+      "Installing collected packages: pip\n",
+      "  Attempting uninstall: pip\n",
+      "    Found existing installation: pip 25.0\n",
+      "    Uninstalling pip-25.0:\n",
+      "      Successfully uninstalled pip-25.0\n",
+      "Successfully installed pip-25.0.1\n"
+     ]
+    }
+   ],
+   "source": [
+    "# !pip install python-dotenv\n",
+    "!python.exe -m pip install --upgrade pip"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "1bb4038f-45a5-45d0-b443-0e2d9cfd76af",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "myphone01077777777\n",
+      "https://www.google.com\n",
+      "이게 될까?? 모르겠어요..!\n"
+     ]
+    }
+   ],
+   "source": [
+    "from dotenv import load_dotenv\n",
+    "import os\n",
+    "\n",
+    "# .env 파일 로드\n",
+    "load_dotenv()\n",
+    "\n",
+    "SKEY = os.getenv(\"SECRET_KEY\")\n",
+    "print(SKEY)\n",
+    "DBUG = os.getenv(\"DEBUG\")\n",
+    "print(DBUG)\n",
+    "TEST = os.getenv(\"TEST\")\n",
+    "print(TEST)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "8b6091ff-5af7-4de5-8df7-cbb306b2bbdb",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{\n",
+      "\t\"lastBuildDate\":\"Thu, 13 Feb 2025 15:50:05 +0900\",\n",
+      "\t\"total\":2094072,\n",
+      "\t\"start\":1,\n",
+      "\t\"display\":5,\n",
+      "\t\"items\":[\n",
+      "\t\t{\n",
+      "\t\t\t\"title\":\"[<b>속보<\\/b>] 넥슨, 2024년 매출 4조원 돌파...`던파 모바일`, `퍼디` 출시 효과\",\n",
+      "\t\t\t\"originallink\":\"https:\\/\\/www.dt.co.kr\\/contents.html?article_no=2025021302109931065010&ref=naver\",\n",
+      "\t\t\t\"link\":\"https:\\/\\/n.news.naver.com\\/mnews\\/article\\/029\\/0002935267?sid=105\",\n",
+      "\t\t\t\"description\":\"2024년 매출 4462억엔, 영업익 1242억엔 넥슨이 '던전앤파이터' 중국, '퍼스트 디센던트' 효과에 따라 2024년 4462억엔, 영업이익 1242억엔을 기록했다고 밝혔다.\",\n",
+      "\t\t\t\"pubDate\":\"Thu, 13 Feb 2025 15:48:00 +0900\"\n",
+      "\t\t},\n",
+      "\t\t{\n",
+      "\t\t\t\"title\":\"잔혹한 학대 당하다 동창 살해한 10대…심신미약 수용 2심서 집행유예\",\n",
+      "\t\t\t\"originallink\":\"http:\\/\\/www.kado.net\\/news\\/articleView.html?idxno=1293309\",\n",
+      "\t\t\t\"link\":\"https:\\/\\/n.news.naver.com\\/mnews\\/article\\/654\\/0000105899?sid=102\",\n",
+      "\t\t\t\"description\":\"<b>속보<\\/b>=잔혹한 괴롭힘을 참지 못하고 살인을 저지 10대 피고인(본지 5월 24일자 5면 등)의 심신미약에 대한 주장이 받아들여지면서 2심에서 집행유예로 감형받아 석방됐다. 13일 서울고법 춘천재판부 형사1부(부장판사... \",\n",
+      "\t\t\t\"pubDate\":\"Thu, 13 Feb 2025 15:42:00 +0900\"\n",
+      "\t\t},\n",
+      "\t\t{\n",
+      "\t\t\t\"title\":\"[<b>속보<\\/b>] 코스피 1.36% 오른 2583.17 마감...원·달러 환율 1447.5원\",\n",
+      "\t\t\t\"originallink\":\"https:\\/\\/www.gukjenews.com\\/news\\/articleView.html?idxno=3201471\",\n",
+      "\t\t\t\"link\":\"https:\\/\\/www.gukjenews.com\\/news\\/articleView.html?idxno=3201471\",\n",
+      "\t\t\t\"description\":\"원·달러 환율이 13년 6개월만에 1400원을 돌파한 22일 오전 서울 여의도 국민은행 딜링룸 전광판에 환율이 표시되고 있다. 코스피는 전 거래일(2347.21)보다 27.51포인트(1.17%) 내린 2319.70에, 코스닥은 전... \",\n",
+      "\t\t\t\"pubDate\":\"Thu, 13 Feb 2025 15:40:00 +0900\"\n",
+      "\t\t},\n",
+      "\t\t{\n",
+      "\t\t\t\"title\":\"[<b>속보<\\/b>] 국힘 윤리위, 尹 제명·탈당 권유 등 징계 않기로 결정\",\n",
+      "\t\t\t\"originallink\":\"https:\\/\\/www.busan.com\\/view\\/busan\\/view.php?code=2025021315294691312\",\n",
+      "\t\t\t\"link\":\"https:\\/\\/n.news.naver.com\\/mnews\\/article\\/082\\/0001311655?sid=100\",\n",
+      "\t\t\t\"description\":\"국민의힘 중앙윤리위원회가 한동훈 전 대표의 요구로 시작된 윤석열 대통령 징계 절차 종결을 선언하고 제명·탈당 권유 등 징계 조치를 하지 않기로 결론을 내렸다. 13일 여의도 당사에서 윤리위 회의를 마친 여상원 당... \",\n",
+      "\t\t\t\"pubDate\":\"Thu, 13 Feb 2025 15:40:00 +0900\"\n",
+      "\t\t},\n",
+      "\t\t{\n",
+      "\t\t\t\"title\":\"[<b>속보<\\/b>] 코스피, 34.78p(1.36%) 오른 2583.17 마감\",\n",
+      "\t\t\t\"originallink\":\"https:\\/\\/www.ajunews.com\\/view\\/20250213153604105\",\n",
+      "\t\t\t\"link\":\"https:\\/\\/www.ajunews.com\\/view\\/20250213153604105\",\n",
+      "\t\t\t\"description\":\"아주경제=홍승우 기자 hongscoop@ajunews.com 코스피, 34.78p(1.36%) 오른 2583.17 마감 코스닥, 4.10p(0.55%) 오른 749.28 마감\",\n",
+      "\t\t\t\"pubDate\":\"Thu, 13 Feb 2025 15:38:00 +0900\"\n",
+      "\t\t}\n",
+      "\t]\n",
+      "}\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 네이버 검색 API 예제 - 뉴스 검색\n",
+    "import os\n",
+    "import sys\n",
+    "import urllib.request\n",
+    "from dotenv import load_dotenv\n",
+    "\n",
+    "load_dotenv()\n",
+    "client_id = os.environ.get(\"MY_ID\")\n",
+    "client_secret = os.environ.get(\"MY_SECRET\")\n",
+    "\n",
+    "encText = urllib.parse.quote(\"속보\")\n",
+    "url = \"https://openapi.naver.com/v1/search/news.json?query=\" + encText + '&display=5&start=1&sort\"sim\"' # JSON 결과\n",
+    "# url = \"https://openapi.naver.com/v1/search/blog.xml?query=\" + encText # XML 결과\n",
+    "request = urllib.request.Request(url)\n",
+    "request.add_header(\"X-Naver-Client-Id\",client_id)\n",
+    "request.add_header(\"X-Naver-Client-Secret\",client_secret)\n",
+    "response = urllib.request.urlopen(request)\n",
+    "rescode = response.getcode()\n",
+    "if(rescode==200):\n",
+    "    response_body = response.read()\n",
+    "    print(response_body.decode('utf-8'))\n",
+    "else:\n",
+    "    print(\"Error Code:\" + rescode)"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "efeb3993-dcbf-4a38-9826-b91744472b82",
+   "id": "b3a45153-aebc-40f7-8c78-3a027e625be9",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# import os\n",
+    "# import sys\n",
+    "# import urllib.request\n",
+    "# from dotenv import load_dotenv\n",
+    "\n",
+    "# load_dotenv()\n",
+    "# client_id = os.environ.get(\"MY_ID\")\n",
+    "# client_secret = os.environ.get(\"MY_SECRET\")\n",
+    "\n",
+    "# args = sys.argv\n",
+    "# print(args[1])\n",
+    "\n",
+    "# def new(category):\n",
+    "#     encText = urllib.parse.quote(category)\n",
+    "#     url = \"https://openapi.naver.com/v1/search/news.json?query=\" + encText + '&display=5&start=1&sort\"sim\"' # JSON 결과\n",
+    "#     # url = \"https://openapi.naver.com/v1/search/blog.xml?query=\" + encText # XML 결과\n",
+    "#     request = urllib.request.Request(url)\n",
+    "#     request.add_header(\"X-Naver-Client-Id\",client_id)\n",
+    "#     request.add_header(\"X-Naver-Client-Secret\",client_secret)\n",
+    "#     response = urllib.request.urlopen(request)\n",
+    "#     rescode = response.getcode()\n",
+    "#     if(rescode==200):\n",
+    "#         response_body = response.read()\n",
+    "#         print(response_body.decode('utf-8'))\n",
+    "#     else:\n",
+    "#         print(\"Error Code:\" + rescode)"
+   ]
   }
  ],
  "metadata": {
