--- a/python04.ipynb
+++ b/python04.ipynb
@@ -676,6 +676,263 @@
     "#     else:\n",
     "#         print(\"Error Code:\" + rescode)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 75,
+   "id": "0f8f2be7-0140-4398-ae5b-9e35ec3be7fb",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "단어를 입력하세요 아루라아\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "아루라아은(는) 거꾸로 하면 다른 단어 입니다.\n"
+     ]
+    }
+   ],
+   "source": [
+    "name = input(\"단어를 입력하세요\")\n",
+    "\n",
+    "if name == name[::-1]:\n",
+    "    print(f'{name}은(는) 거꾸로 해도 똑같은 단어 입니다.')\n",
+    "else:\n",
+    "    print(f'{name}은(는) 거꾸로 하면 다른 단어 입니다.')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 85,
+   "id": "0ba4a39b-8dee-4299-bf1d-e78b750d00f5",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "추가할 숫자 개수를 입력하세요 :  5\n",
+      "값을 입력하세요:  1\n",
+      "값을 입력하세요:  2\n",
+      "값을 입력하세요:  3\n",
+      "값을 입력하세요:  4\n",
+      "값을 입력하세요:  5\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[1], [2], [3], [4], [5]]\n",
+      "짝수 리스트 : [0, 2, 4], 홀수 리스트 : [1, 3, 5]\n"
+     ]
+    }
+   ],
+   "source": [
+    "adn = int(input(\"추가할 숫자 개수를 입력하세요 : \"))\n",
+    "\n",
+    "num = []  # 짝수 인덱스의 문자 저장\n",
+    "c = []  # 홀수 인덱스의 문자 저장\n",
+    "d = []\n",
+    "\n",
+    "for i in range(adn):\n",
+    "    num.append(list(map(int,input(\"값을 입력하세요: \").split())))\n",
+    "print(f'{num}')\n",
+    "\n",
+    "\n",
+    "for i in range(len(num)+1):\n",
+    "    if i % 2 == 0:\n",
+    "        c.append(i)\n",
+    "    else:\n",
+    "        d.append(i)\n",
+    "\n",
+    "print(f'짝수 리스트 : {c}, 홀수 리스트 : {d}')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 99,
+   "id": "4928a538-231e-4a6a-b6bd-c13d663e2084",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "추가할 단어 개수를 입력하세요 :  3\n",
+      "추가할 단어를 입력하세요 :  kiwi\n",
+      "추가할 단어를 입력하세요 :  banana\n",
+      "추가할 단어를 입력하세요 :  orange\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['kiwi', 'banana', 'orange']\n",
+      "문자의 최대 길이는 : 6 입니다.\n",
+      "가장 긴 문자는 : ['banana', 'orange'] 입니다.\n"
+     ]
+    }
+   ],
+   "source": [
+    "add = int(input(\"추가할 단어 개수를 입력하세요 : \"))\n",
+    "num = []\n",
+    "mx = []\n",
+    "mxn = 0\n",
+    "\n",
+    "for i in range(add):\n",
+    "    num.append(input(\"추가할 단어를 입력하세요 : \"))\n",
+    "print(f'{num}')\n",
+    "\n",
+    "# 각 단어의 길이를 비교하여 최대 길이를 구하기\n",
+    "for i in num:\n",
+    "    if len(i) > mxn:\n",
+    "        mxn = len(i)\n",
+    "print(f'문자의 최대 길이는 : {mxn} 입니다.')\n",
+    "\n",
+    "# 최대 길이와 같은 단어들을 찾기\n",
+    "for i in num:\n",
+    "    if len(i) == mxn:\n",
+    "        mx.append(i)\n",
+    "print(f'가장 긴 문자는 : {mx} 입니다.')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 104,
+   "id": "5289cff0-a089-46d7-9e3f-4424639f88c5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import qrcode\n",
+    "\n",
+    "def qrcode_maker(text,filename='qr.png'):\n",
+    "    qr =qrcode.make(text)\n",
+    "    qr.save(filename)\n",
+    "\n",
+    "# qrcode_maker(\"안녕하세요. 김정현 입니다.\")\n",
+    "qrcode_maker(\"www.naver.com\",'naver.png')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 101,
+   "id": "06aa219a-b4b4-4da7-9f95-7da54adc1ff2",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Collecting qrcode\n",
+      "  Downloading qrcode-8.0-py3-none-any.whl.metadata (17 kB)\n",
+      "Requirement already satisfied: colorama in c:\\users\\admin\\appdata\\local\\programs\\python\\python313\\lib\\site-packages (from qrcode) (0.4.6)\n",
+      "Downloading qrcode-8.0-py3-none-any.whl (45 kB)\n",
+      "Installing collected packages: qrcode\n",
+      "Successfully installed qrcode-8.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "!pip install qrcode"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 110,
+   "id": "7bc6063c-5731-4874-b439-0c38a06520b5",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<img src=\"qr.png\" width=100>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "from IPython.display import display, HTML\n",
+    "from PIL import Image\n",
+    "\n",
+    "image_path = \"qr.png\"\n",
+    "img = Image.open(image_path)\n",
+    "htmlcode = '<img src=\"qr.png\" width=100>'\n",
+    "\n",
+    "display(HTML(htmlcode))\n",
+    "# display(img)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "45cf8d1a-1985-4bbd-8f6f-5c2c241f6406",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "당신의 기분을 한 문장으로 표현해주세요:  멋져!!\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "입력된 단어: ['멋져!!']\n",
+      "긍정적인 단어: []\n",
+      "부정적인 단어: []\n",
+      "평범한 하루네요.\n"
+     ]
+    }
+   ],
+   "source": [
+    "positive_words = [\"좋아\", \"행복\", \"멋져\", \"최고\", \"사랑해\"]\n",
+    "negative_words = [\"싫어\", \"화나\", \"짜증\", \"별로\", \"나빠\"]\n",
+    "\n",
+    "pw = []\n",
+    "nw = []\n",
+    "\n",
+    "status = input(\"당신의 기분을 한 문장으로 표현해주세요: \").split()\n",
+    "print(\"입력된 단어:\", status)\n",
+    "\n",
+    "for i in status:\n",
+    "    if i in positive_words:\n",
+    "        pw.append(i)\n",
+    "    elif i in negative_words:\n",
+    "        nw.append(i)\n",
+    "\n",
+    "print(\"긍정적인 단어:\", pw)\n",
+    "print(\"부정적인 단어:\", nw)\n",
+    "\n",
+    "if len(pw) > len(nw):\n",
+    "    print(\"기분이 좋아 보이네요!\")\n",
+    "elif len(nw) > len(pw):\n",
+    "    print(\"기분이 나빠 보이네요.\")\n",
+    "else:\n",
+    "    print(\"평범한 하루네요.\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "51a42350-f262-49f8-a306-86befbf2a3e4",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
